--- a/priya/PRIYA PORTFOLIO/views/style.css
+++ b/priya/PRIYA PORTFOLIO/views/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -48,4 +48,4 @@ body {
     width: 100%;
     bottom: 0;
  }
- 
+  */
