changes in Portfolio

--- a/divya/expressJs/views/divya.ejs
+++ b/divya/expressJs/views/divya.ejs
@@ -125,7 +125,7 @@
             </div>
             <div class="portfolio-content container">
                 <div class="proj-1">
-                    <img src="website.jpg">
+                    <img src="/images/website.jpeg">
                     <div class="proj1-details">
                         <i class="fab fa-html5"></i>
                         <i class="fab fa-css3-alt"></i>
