--- a/Kashish Mittal/portfolio/views/index.ejs
+++ b/Kashish Mittal/portfolio/views/index.ejs
@@ -112,6 +112,7 @@
 		<!--welcome-hero end -->
 
 		<!--about start -->
+
 		<section id="about" class="about">
 			<div class="section-heading text-center">
 				<h2>about me</h2>
@@ -147,13 +148,16 @@
 										</div>
 									</div>
 								</div>
-								
+								<div class="col-sm-offset-1 col-sm-5">
+									<div class="single-about-img">
+										<img src=""C:\Users\Kashish Mittal\Downloads\image.jpg"" alt="profile_image">
 							
 						</div>
 						
 									
 
 							</div>
+
 
 						</div>
 					</div>
@@ -327,9 +331,14 @@
 							
 								<div class="single-profile profile-no-border">
 									<div class="profile-txt">
-										<a href=""><i class="flaticon-github-logo"></i></a>
+										<a href="kashishmittal.git"><i class="flaticon-github-logo"></i></a>
 										<div class="profile-icon-name">github</div>
 									</div>
+									<div class="single-profile-overlay">
+										<div class="profile-txt">
+											<a href="kashishmittal.git"><i class="flaticon-github-logo"></i></a>
+											<div class="profile-icon-name">github</div>
+										</div>
 									
 					</div>
 				</div>
