--- a/shikha/portfolio/views/index.ejs
+++ b/shikha/portfolio/views/index.ejs
@@ -119,7 +119,8 @@
 
 <body>
     <div class="container">
-        <h1>Shikha Verma</h1>
+        <h1>Shikha Verma | Portfolio
+        </h1>
         <% projects.forEach(project => { %>
             <div class="project">
                 <h2><%= project.title %></h2>
