--- a/Akshita Jairamani/PORTFOLIO/views/portfolio.ejs
+++ b/Akshita Jairamani/PORTFOLIO/views/portfolio.ejs
@@ -321,7 +321,7 @@
     <footer>
         <p>&copy; 2024 Akshita Jairamani. All Rights Reserved.</p>
     </footer>
-
+    <h1>Welcome, <%= text %>!</h1>
     
 </body>
 </html>
