--- a/Crud_Operation/views/index.ejs
+++ b/Crud_Operation/views/index.ejs
@@ -48,10 +48,10 @@
       </form>
     </div>
 
-    <ul>
-      <% todoList.forEach(task=> { %>
-        <li class="task-item <%= task.priority %>">
-          <div class="task-content">
+co    <ul>
+      <% todoLis=t.forEach(task=> { %>
+        <li class"task-item <%= task.priority %>">
+          <div class="task-ntent">
             <h2>
               <%= task.task %>
             </h2>
