Updated Portfolio and CRUD APP

--- a/divya/Portfolio/views/divya.ejs
+++ b/divya/Portfolio/views/divya.ejs
@@ -135,11 +135,10 @@
                         <h2>Kalindi College Website Development <br> (Academic Project)</h2>
                         <p>Build Using HTML, CSS, Jsp, JAVA, MySQL, JDBC</p>
                         <p> Lead of Project <i>Kulanshu sharma</i> </p>
-                        <button><a href="https://github.com/Kulanshu-sharma/Kalindi" target="blank">View source </a>
+
+                        <button><a href="<%=locals.kalindi_project %>" target="blank">View source </a>
                         </button>
-                        <!-- <button><a href="https://fervent-lamarr-2bc6cf.netlify.app/" target="blank">Try it Live <i
-                  class="fas fa-external-link-alt"></i></a>
-              </button> -->
+                       
                     </div>
                 </div>
 
@@ -158,11 +157,11 @@
                     <p class="links">Or find me on:</p>
                     <br>
 
-                    <a href="https://www.linkedin.com/in/divya-gupta-9262b82a2"><i class="fa-brands fa-linkedin-in">
+                    <a href="<%=locals.linkedIn %>"><i class="fa-brands fa-linkedin-in">
                         </i></a>
                     <a href=""><i class="fa-brands fa-facebook-f"> </i></a>
-                    <a href="https://github.com/DivyaGupta04"><i class="fa-brands fa-github"> </i></a>
-                    <a href="https://hub.docker.com/u/itsmedivya0405"><i class="fa-brands fa-docker"> </i></a>
+                    <a href="<%=locals.GitHub %>"><i class="fa-brands fa-github"> </i></a>
+                    <a href="<%=locals.DockerHub %>"><i class="fa-brands fa-docker"> </i></a>
                 </div>
             </div>
         </div>
