new Api get added to index.js file

--- a/anyu/portfolio/Views/connect.ejs
+++ b/anyu/portfolio/Views/connect.ejs
@@ -40,8 +40,8 @@
             <button type="submit">Send Message</button>
         </form>
         <div class="social-icons">
-            <a href="https://www.instagram.com/who_anuu/?igsh=Y3R3NmtsZnJmdjU%3D" target="_blank" class="icon"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/anu-pandey-840821271/" target="_blank" class="icon"><i class="fab fa-linkedin"></i></a>
+            <a href="<%=instagram_link%>" target="_blank" class="icon"><i class="fab fa-instagram"></i></a>
+            <a href="<%=linkedIn%>" target="_blank" class="icon"><i class="fab fa-linkedin"></i></a>
         </div>
     </div>
 
