--- a/anyu/portfolio/Views/project.ejs
+++ b/anyu/portfolio/Views/project.ejs
@@ -27,7 +27,7 @@
                 <div class="image-container">
                     <img class="image" src="/images/project1.jpg" alt="Project Image">
 
-                    <a href="<%= githubLink %>" target="_blank">
+                    <a href="<%= hexcolor_code %>" target="_blank">
                         <div class="image"></div>
                         <div class="image-overlay"></div>
                     </a>
@@ -46,7 +46,7 @@
                 </div>
                 <div class="image-container">
                     <img class="image" src="/images/project2.0.png" alt="Project Image">
-                    <a href="https://github.com/anuucodes/BackenedProject" target="_blank">
+                    <a href="<%= backened_project%>" target="_blank">
                         <div class="image"></div>
                         <div class="image-overlay"></div>
                     </a>
@@ -55,7 +55,7 @@
         </section>
 
         <div class="github-link">
-            <a href="https://github.com/anuucodes" target="_blank">Visit my GitHub</a>
+            <a href="<%= githubLink%>" target="_blank">Visit my GitHub</a>
         </div>
     </main>
 
